SE AGREGAN MODIFICACIONES AL GEO

--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -26,6 +26,8 @@
 @import 'buttons.less';
 @import 'layers.less';
 @import 'cartography.less';
+@import 'views.less';
+@import 'demo.less';
 // @import 'mixins/foo.less';
 // @import 'mixins/bar.less';
 // @import 'mixins/baz.less';
