--- a/assets/styles/layers.less
+++ b/assets/styles/layers.less
@@ -6,7 +6,7 @@ div[layers]{
 	border: 1px solid #999;
 	margin-bottom: 10px;
 	div[title]{
-		height: 20px;
+		height: 35px;
 		width: ~'calc(100% - 15px)';
 		padding: 7.5px;
 		font-size: 0.8rem;
@@ -26,6 +26,7 @@ div[layers]{
 				float: left;
 				width: auto;
 				font-size: 0.8rem;
+				padding-top: 2.5px;
 			}
 			input[option-cartography]{
 				float: left;
