--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,6 +29,8 @@
     -->
 
     <!--STYLES-->
+    <link rel="stylesheet" href="/styles/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/styles/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
     <!-- GOOGLEMAPS -->
@@ -92,13 +94,15 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/dependencies/1.jquery-2.2.1.min.js"></script>
+    <script src="/js/dependencies/2.bootstrap.js"></script>
     <script src="/js/dependencies/geoxml3.js"></script>
-    <script src="/js/dependencies/jquery-2.2.1.min.js"></script>
     <script src="/js/dependencies/prototypes.js"></script>
-    <script src="/js/lib/buttons.js"></script>
-    <script src="/js/lib/cartography.js"></script>
-    <script src="/js/lib/geomap.js"></script>
-    <script src="/js/lib/layers.js"></script>
+    <script src="/js/lib/1.geomap.js"></script>
+    <script src="/js/lib/2.buttons.js"></script>
+    <script src="/js/lib/3.cartography.js"></script>
+    <script src="/js/lib/4.layers.js"></script>
+    <script src="/js/lib/5.views.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
