--- a/assets/styles/paneles.less
+++ b/assets/styles/paneles.less
@@ -1,8 +1,16 @@
-div[panelizq]{
+div[panelderecho]{
 	position: absolute;
-	width: 250px;
+	width: 280px;
 	top:0px;
 	right: 0px;	
+	z-index: 3;
+	padding: 10px;
+}
+div[panelizq]{
+	position: absolute;
+	width: 280px;
+	top:50px;
+	left: 0px;	
 	z-index: 3;
 	padding: 10px;
 }
