--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -28,6 +28,8 @@
 @import 'cartography.less';
 @import 'views.less';
 @import 'demo.less';
+@import 'info.less';
+@import 'leyenda.less';
 // @import 'mixins/foo.less';
 // @import 'mixins/bar.less';
 // @import 'mixins/baz.less';
