--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -79,4 +79,19 @@
             </div>
         </div>
     </div>
+    <div info>
+        <div title></div>
+        <div body></div>
+    </div>
+    <div leyenda>
+        <div prototype>
+            <div itemleyed>
+                <div itemcolor></div>
+                <div itemnumber></div>
+            </div>
+        </div>
+        <app name="leyend" leyend="Leyenda" button><i class="fa fa-info-circle"></i></app>
+        <div title>Leyenda - Sin capa de analisis</div>
+        <div body></div>
+    </div>
 </div>
