--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -98,11 +98,16 @@
     <script src="/js/dependencies/2.bootstrap.js"></script>
     <script src="/js/dependencies/geoxml3.js"></script>
     <script src="/js/dependencies/prototypes.js"></script>
+    <script src="/js/layerlogic/siaper.js"></script>
+    <script src="/js/layerlogic/sica.js"></script>
+    <script src="/js/layerlogic/sicogen.js"></script>
     <script src="/js/lib/1.geomap.js"></script>
     <script src="/js/lib/2.buttons.js"></script>
     <script src="/js/lib/3.cartography.js"></script>
     <script src="/js/lib/4.layers.js"></script>
     <script src="/js/lib/5.views.js"></script>
+    <script src="/js/lib/6.info.js"></script>
+    <script src="/js/lib/7.leyenda.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
