--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -82,6 +82,11 @@
     <div info>
         <div title></div>
         <div body></div>
+        <div chart>
+            <div id="canvas-holder">
+                <canvas id="chart-area" width="200" height="200"/>
+            </div>
+        </div>
     </div>
     <div leyenda>
         <div prototype>
