--- a/assets/styles/info.less
+++ b/assets/styles/info.less
@@ -25,4 +25,12 @@ div[info]{
 			padding-right: 5px;
 		}
 	}
+	div[chart]{
+		padding: 50px;
+		height: 300px;
+		width: 300px;
+		position: relative;
+		font-size: 0.7rem;
+		color: #FFF;
+	}
 };
