--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -96,6 +96,7 @@
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/dependencies/1.jquery-2.2.1.min.js"></script>
     <script src="/js/dependencies/2.bootstrap.js"></script>
+    <script src="/js/dependencies/3.Chart.js"></script>
     <script src="/js/dependencies/geoxml3.js"></script>
     <script src="/js/dependencies/prototypes.js"></script>
     <script src="/js/layerlogic/siaper.js"></script>
