--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -99,6 +99,7 @@
     <script src="/js/dependencies/3.Chart.js"></script>
     <script src="/js/dependencies/geoxml3.js"></script>
     <script src="/js/dependencies/prototypes.js"></script>
+    <script src="/js/layerlogic/servicios.js"></script>
     <script src="/js/layerlogic/siaper.js"></script>
     <script src="/js/layerlogic/sica.js"></script>
     <script src="/js/layerlogic/sicogen.js"></script>
