--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,9 +29,7 @@
     -->
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/styles/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="/styles/bootstrap.min.css">
-    <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/min/production.min.css">
     <!--STYLES END-->
     <!-- GOOGLEMAPS -->
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6Bf-4zuKPSdFtGF4ZYIORhz2MVH1assw"></script>
@@ -93,24 +91,7 @@
     -->
 
     <!--SCRIPTS-->
-    <script src="/js/dependencies/sails.io.js"></script>
-    <script src="/js/dependencies/1.jquery-2.2.1.min.js"></script>
-    <script src="/js/dependencies/2.bootstrap.js"></script>
-    <script src="/js/dependencies/3.Chart.js"></script>
-    <script src="/js/dependencies/geoxml3.js"></script>
-    <script src="/js/dependencies/prototypes.js"></script>
-    <script src="/js/layerlogic/servicios.js"></script>
-    <script src="/js/layerlogic/siaper.js"></script>
-    <script src="/js/layerlogic/sica.js"></script>
-    <script src="/js/layerlogic/sicogen.js"></script>
-    <script src="/js/lib/1.geomap.js"></script>
-    <script src="/js/lib/2.buttons.js"></script>
-    <script src="/js/lib/3.cartography.js"></script>
-    <script src="/js/lib/4.layers.js"></script>
-    <script src="/js/lib/5.views.js"></script>
-    <script src="/js/lib/6.info.js"></script>
-    <script src="/js/lib/6.metadata.js"></script>
-    <script src="/js/lib/7.leyenda.js"></script>
+    <script src="/min/production.min.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
