SE GREGAN TRES CAPAS

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -99,6 +99,9 @@
     <script src="/js/dependencies/3.Chart.js"></script>
     <script src="/js/dependencies/geoxml3.js"></script>
     <script src="/js/dependencies/prototypes.js"></script>
+    <script src="/js/layerlogic/capa_azul.js"></script>
+    <script src="/js/layerlogic/capa_roja.js"></script>
+    <script src="/js/layerlogic/capa_verde.js"></script>
     <script src="/js/layerlogic/final_archivo.js"></script>
     <script src="/js/layerlogic/servicios.js"></script>
     <script src="/js/layerlogic/siaper.js"></script>
