SE AGREGAN LA CAPAS DE FISCALIZACION

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,7 +29,9 @@
     -->
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/min/production.min.css">
+    <link rel="stylesheet" href="/styles/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
     <!-- GOOGLEMAPS -->
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6Bf-4zuKPSdFtGF4ZYIORhz2MVH1assw"></script>
@@ -91,9 +93,6 @@
     -->
 
     <!--SCRIPTS-->
-<<<<<<< HEAD
-    <script src="/min/production.min.js"></script>
-=======
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/dependencies/1.jquery-2.2.1.min.js"></script>
     <script src="/js/dependencies/2.bootstrap.js"></script>
@@ -102,12 +101,21 @@
     <script src="/js/dependencies/prototypes.js"></script>
     <script src="/js/layerlogic/capa_azul.js"></script>
     <script src="/js/layerlogic/capa_roja.js"></script>
+    <script src="/js/layerlogic/capa_verde (copia).js"></script>
+    <script src="/js/layerlogic/capa_verde (otra copia).js"></script>
     <script src="/js/layerlogic/capa_verde.js"></script>
+    <script src="/js/layerlogic/colegios.js"></script>
+    <script src="/js/layerlogic/conpatente.js"></script>
     <script src="/js/layerlogic/final_archivo.js"></script>
     <script src="/js/layerlogic/servicios.js"></script>
     <script src="/js/layerlogic/siaper.js"></script>
     <script src="/js/layerlogic/sica.js"></script>
     <script src="/js/layerlogic/sicogen.js"></script>
+    <script src="/js/layerlogic/sininfo.js"></script>
+    <script src="/js/layerlogic/sinpatente (copia).js"></script>
+    <script src="/js/layerlogic/sinpatente (otra copia).js"></script>
+    <script src="/js/layerlogic/sinpatente.js"></script>
+    <script src="/js/layerlogic/tragamonedas.js"></script>
     <script src="/js/lib/1.geomap.js"></script>
     <script src="/js/lib/2.buttons.js"></script>
     <script src="/js/lib/3.cartography.js"></script>
@@ -117,7 +125,6 @@
     <script src="/js/lib/6.metadata.js"></script>
     <script src="/js/lib/7.leyenda.js"></script>
     <script src="/js/lib/8.utils.js"></script>
->>>>>>> c2a3260b1b5567c1623a5249980352779f179338
     <!--SCRIPTS END-->
   </body>
 </html>
