--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -95,6 +95,12 @@
                 <div itemnumber></div>
             </div>
         </div>
+        <div prototypecolumn>
+            <div itemleyedcolumn>
+                <div itemcolor></div>
+                <div itemnumber></div>
+            </div>
+        </div>
         <app name="leyend" leyend="Leyenda" button><i class="fa fa-info-circle"></i></app>
         <div title>Leyenda - Sin capa de analisis</div>
         <div body></div>
