Se agregan nuevas capas segun solicitud de fiscalizacion

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -99,14 +99,15 @@
     <script src="/js/dependencies/3.Chart.js"></script>
     <script src="/js/dependencies/geoxml3.js"></script>
     <script src="/js/dependencies/prototypes.js"></script>
-    <script src="/js/layerlogic/Salud.js"></script>
     <script src="/js/layerlogic/capa_azul.js"></script>
     <script src="/js/layerlogic/capa_roja.js"></script>
     <script src="/js/layerlogic/capa_verde.js"></script>
     <script src="/js/layerlogic/colegios.js"></script>
+    <script src="/js/layerlogic/colegios_lo_prado.js"></script>
     <script src="/js/layerlogic/comisarias.js"></script>
     <script src="/js/layerlogic/conpatente.js"></script>
     <script src="/js/layerlogic/final_archivo.js"></script>
+    <script src="/js/layerlogic/locales_lo_prado.js"></script>
     <script src="/js/layerlogic/pdi.js"></script>
     <script src="/js/layerlogic/salud.js"></script>
     <script src="/js/layerlogic/servicios.js"></script>
