--- a/WebContent/styles/importer.css
+++ b/WebContent/styles/importer.css
@@ -2475,7 +2475,7 @@ div[map] {
 }
 div[panelderecho] {
   position: absolute;
-  width: 280px;
+  max-width: 400px;
   top: 0px;
   right: 0px;
   z-index: 3;
