--- a/WebContent/styles/importer.css
+++ b/WebContent/styles/importer.css
@@ -2825,21 +2825,20 @@ div[leyenda] div[body] {
   color: #FFF;
 }
 div[leyenda] div[body] div[itemleyed] {
-  float: left;
-  height: 40px;
-  width: 20px;
+  height: 25px;
   margin-left: 3px;
 }
 div[leyenda] div[body] div[itemleyed] div[itemcolor] {
   float: left;
   height: 20px;
   width: 20px;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 div[leyenda] div[body] div[itemleyed] div[itemnumber] {
   float: left;
   height: 20px;
-  padding-top: 4px;
-  width: 20px;
+  padding: 2px 0 0 4px;
   color: #666;
   text-align: center;
 }
