--- a/WebContent/styles/leyenda.less
+++ b/WebContent/styles/leyenda.less
@@ -22,20 +22,19 @@ div[leyenda]{
 		font-size: 0.7rem;
 		color: #FFF;
 		div[itemleyed]{
-			float: left;
-		    height: 40px;
-		    width: 20px;
+		    height: 25px;
 		    margin-left: 3px;
 			div[itemcolor]{
 				float: left;
 			    height: 20px;
-			    width: 20px;
+				width: 20px;
+				background-size: contain;
+				background-repeat: no-repeat;
 			}
 			div[itemnumber]{
 				float: left;
 				height: 20px;
-				padding-top: 4px;
-			    width: 20px;
+				padding: 2px 0 0 4px;
 				color: #666;
 				text-align: center;
 			}
